# runic

./: .env.test  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CONTRIBUTING.md  README.md  Taskfile.dist.yml  docker-compose.test.yml  lint_errors.txt  pyproject.toml  runic_changelog.md
.claude/: ralph-loop.local.md  settings.json
.claude/agents/: python-pro.md
.claude/hooks/: stop-hook.sh
.claude/skills/: harmonyhub  homekit  huehub  sonos
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  ralph_loop_task.yml
.github/prompts/: boost.prompt.md
.github/workflows/: ci.yml
.task/checksum/: docs-build
docs/: Makefile  impressum.md  index.md  installation.md  package-lock.json  package.json  requirements.txt
docs/.vitepress/: config.mts
docs/.vitepress/theme/: index.ts  style.css
docs/migration/: api.md  autogenerate.md  branching.md  cli-reference.md  index.md  integration.md  limitations.md  operations-reference.md  quickstart.md  schema.md  testing.md
docs/ogm/: api.md  async.md  concepts.md  drivers.md  query-builder.md  quickstart.md  relationships.md  session.md  testing.md
docs/source/: api.rst  async.rst  autogenerate.rst  cli_reference.rst  concepts.rst  conf.py  drivers.rst  index.rst  installation.rst  limitations.rst  operations_reference.rst  query_builder.rst  quickstart.rst  relationships.rst  schema.rst  session.rst  testing.rst
docs/source/_static/: custom.css
docs/source/migration/: api.rst  autogenerate.rst  branching.rst  cli_reference.rst  index.rst  integration.rst  limitations.rst  operations_reference.rst  quickstart.rst  schema.rst  testing.rst
docs/source/tutorial/: first_migration.rst  history.rst  upgrade_downgrade.rst
docs/superpowers/plans/: 2026-05-29-runic-phase0.md
docs/superpowers/specs/: 2026-05-29-runic-phase0-design.md
examples/migrations/: env.py  script.py.mako
examples/migrations/versions/: 172990dfd7c2_test_graph.py  5db401da8f74_baseline.py  b04e8693b2c0_link_traveler_nationality_to_country.py  b97ff97c0e80_test_graph_step_2.py
examples/orm/: 01_simple_crud.py  02_polymorphic_locations.py  03_relationships_and_edges.py  04_pagination_and_custom_queries.py  05_schema_management.py  06_native_types.py  07_query_builder_basics.py  08_query_builder_traversal.py  09_query_builder_edges.py  10_query_builder_aggregation.py  11_query_builder_search.py  12_apache_age.py
falkordb/: __init__.py  bootstrap.py  client.py  config.py  migration_runner.py  validate.py
falkordb/migrations/: __init__.py  base.py  registry.py  utils.py
falkordb/migrations/versions/: 001_initial_schema.py  002_location_indexes.py  003_interest_nodes.py  004_add_geo_points.py  005_trip_access_constraints.py  __init__.py
falkordb/queries/: __init__.py  location_queries.py  recommendation_queries.py  trip_queries.py
falkordb/schema/: __init__.py  constraints.py  labels.py  relationships.py
falkordb/services/: __init__.py  authorization_service.py  location_graph_service.py  trip_graph_service.py
plans/: guardrails.md  prd.json  progress.md
runic/: __init__.py  autogen.py  cli.py  context.py  cypher.py  exceptions.py  introspect.py  operations.py  script.py  service.py  testing.py  version.py
runic/adapters/: __init__.py  falkordb.py
runic/migrate/: __init__.py  autogen.py  checksum.py  cli.py  config.py  context.py  introspect.py  manifest.py  operations.py  schema.py  script.py  testing.py  version.py
runic/migrate/adapters/: __init__.py  _base.py  age.py  arcadedb.py  falkordb.py  memgraph.py  neo4j.py
runic/migrate/templates/: env.py.mako
runic/ogm/: __init__.py  exceptions.py  operations.py
runic/ogm/core/: descriptors.py  metadata.py  models.py  types.py
runic/ogm/driver/: __init__.py  age.py  arcadedb.py  bolt.py  factory.py  falkordb.py  memgraph.py  neo4j.py
runic/ogm/mapper/: __init__.py  mapper.py  relationship_loader.py  relationship_writer.py
runic/ogm/query/: __init__.py  _compiler.py  _decoder.py  builder.py  expressions.py  specialised.py  traversal.py
runic/ogm/repository/: __init__.py  async_repository.py  cypher.py  protocol.py  repository.py
runic/ogm/schema/: __init__.py  index_manager.py
runic/ogm/session/: _base.py  async_session.py  connection_pool.py  session.py
runic/orm/: __init__.py  exceptions.py  operations.py
runic/orm/core/: descriptors.py  metadata.py  models.py  types.py
runic/orm/driver/: __init__.py  age.py  arcadedb.py  bolt.py  factory.py  falkordb.py  memgraph.py  neo4j.py
runic/orm/mapper/: __init__.py  (+3 more)
runic/templates/: env.py.mako  script.py.mako
runic_test/: env.py
scripts/: generate_changelog.py
scripts/ralph/: ralph-status.sh  ralph-stop.sh  ralph-tail.sh  ralph.sh
skill/runic/: SKILL.md
skill/runic-migrate/: SKILL.md
skill/runic-ogm/: SKILL.md
skill/runic-orm/: SKILL.md
spec/: mulit-drive-index-and-schemamager.md  phase_0.md  phase_1.md  phase_3.md  phase_4.md  refactor-test-suite.md  runic_concept.md  runic_orm_implementation_plan.md  unify-schema-inspection.md
specs/: findings.md
taskfiles/: Taskfile.docs.yml  Taskfile.graphdb.yml  Taskfile.qa.yml  Taskfile.release.yml
tests/: _backends.py  conftest.py  test_autogen.py  test_baseline_context.py  test_baseline_render.py  test_check_command.py  test_checksum.py  test_cli.py  test_cli_baseline.py  test_cli_phase1.py  test_cli_phase3.py  test_cli_phase4.py  test_config.py  test_context.py  test_context_stamp.py  test_falkordb_adapter.py  test_falkordb_migrations.py  test_info_command.py  test_integration.py  test_introspect.py  test_manifest.py  test_merge.py  test_operations.py  test_run_command.py  test_script.py  test_script_dag.py  test_service.py  test_snapshot.py  test_validate.py  test_version.py  test_version_multihead.py
tests/evals/: .dataset.json  .migrate_dataset.json  README.md  claude_cli_model.py  conftest.py  metrics.py  runic_migrate_app.py  runic_orm_app.py  test_runic_migrate_skill.py  test_runic_orm_skill.py
tests/runic/: test_cypher.py
tests/scripts/: test_generate_changelog.py
(+227 files in other folders)
