[project]
name = "runic-py"
version = "0.3.3"
description = "Graph schema migrations and ORM for Cypher-based graph databases."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Jens Rehpöhler" }]
keywords = []
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Database",
]

dependencies = [
    "typer>=0.26.0,<1.0.0",
    "rich>=14.0.0,<16.0.0",
    "mako>=1.3.0,<2.0.0",
    "shellingham>=1.5.0,<2.0.0",
]

[project.optional-dependencies]
falkordb = ["falkordb>=1.6.0,<2.0.0"]
neo4j = ["neo4j>=6.2.0,<7.0.0"]
memgraph = ["neo4j>=6.2.0,<7.0.0"]
arcadedb = ["neo4j>=6.2.0,<7.0.0"]
age = ["psycopg>=3.3.4,<4.0.0"]
age-binary = ["psycopg[binary]>=3.3.4,<4.0.0"]
all = [
    "falkordb>=1.6.0,<2.0.0",
    "neo4j>=6.2.0,<7.0.0",
    "psycopg[binary]>=3.3.4,<4.0.0",
]
[dependency-groups]
dev = [
    "bump-my-version==1.3.0",
    "deepeval==4.0.5",
    "detect-secrets==1.5.0",
    "falkordb>=1.6.1",
    "falkordblite==0.10.0",
    "furo==2025.12.19",
    "neo4j==6.2.0",
    "pre-commit==4.6.0",
    "psycopg[binary]==3.3.4",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "pytest-httpserver==1.1.5",
    "pytest==9.0.3",
    "python-dotenv==1.2.2",
    "ruff==0.15.16",
    "sphinx-copybutton==0.5.2",
    "sphinx-design==0.7.0",
    "sphinx==9.1.0",
    "ty==0.0.44",
]

[project.scripts]
runic = "runic.migrate.cli:app"

[project.urls]
Homepage = "https://runic-py.readthedocs.io/en/latest/"
Repository = "https://github.com/jenreh/runic"

[tool.hatch.build.targets.wheel]
packages = ["runic"]

[tool.hatch.build.targets.sdist]
include = [
    "/runic",
    "README.md",
    "pyproject.toml",
]
exclude = [
    ".agents/",
    ".cache/",
    ".claude/",
    ".devcontainer/",
    ".github/",
    ".vscode/",
    "skill/",
    "spec/",
    "tests/",
    ".env",
    ".gitignore",
    ".pre-commit-config.yaml",
    "AGENTS.md",
    "coverage.xml",
    "Taskfile.yaml",
]

[tool.bumpversion]
commit = false
current_version = "0.3.3"
tag = false
allow-dirty = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "README.md"
search = '![Version](https://img.shields.io/badge/version-{current_version}-blue)'
replace = '![Version](https://img.shields.io/badge/version-{new_version}-blue)'

[[tool.bumpversion.files]]
filename = "docs/source/index.rst"
search = '.. |Github| image:: https://img.shields.io/badge/release-{current_version}-yellow?logo=github'
replace = '.. |Github| image:: https://img.shields.io/badge/release-{new_version}-yellow?logo=github'

[[tool.bumpversion.files]]
filename = "docs/source/index.rst"
search = '   :target: https://github.com/jenreh/runic/tree/v{current_version}'
replace = '   :target: https://github.com/jenreh/runic/tree/v{new_version}'

[[tool.bumpversion.files]]
filename = "docs/source/conf.py"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "docs/source/conf.py"
search = 'release = "{current_version}"'
replace = 'release = "{new_version}"'

[tool.ruff]
cache-dir = ".cache/ruff"
indent-width = 4
line-length = 88
target-version = "py314"
extend-exclude = [
    ".agents",
    ".cache",
    ".claude",
    ".devcontainer",
    ".github",
    ".vscode",
    "build",
    "dist",
    "docs",
    "skill",
]

[tool.ruff.lint]
extend-select = ["I"]
ignore = [
    "EM101",
    "EM102",
    "ISC001",
    "N811",
    "N818",
    "PLR0913",
    "PT011",
    "PT012",
    "RUF012",
    "RUF100",
    "SIM300",
    "E501",
    "B008",
    "ASYNC240",
    "PYI034",
    "S101",
    "PLR0912",
    "PLR0915",
    "ASYNC109",
    "ARG001",
    "PLR2004",
    "PLW0603",
    "PLC0415",
    "SIM105",
    "PLW2901",
    "PLR0911",
    "B017",
    "RUF001",
    "RUF002",
    "RUF003",
]
select = [
    "A",
    "ANN001",
    "ANN201",
    "ARG",
    "ASYNC",
    "B",
    "C4",
    "DTZ",
    "E",
    "EM",
    "EXE",
    "F",
    "FIX",
    "G",
    "ICN",
    "LOG",
    "N",
    "PERF",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "SLF001",
    "T20",
    "TID",
    "UP",
    "W",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "I001"]
"test_**.py" = [
    "S101",
    "PLR2004",
    "ANN001",
    "S106",
    "SLF001",
    "RET504",
    "PERF401",
    "E402",
    "S501",
    "S110",
    "ARG002",
    "ARG005",
    "E741",
    "RUF059",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
exclude = ["*.pyi"]

[tool.ruff.lint.isort]
known-local-folder = ["sonos"]

[tool.pytest.ini_options]
cache_dir = ".cache/pytest"
testpaths = ["tests"]
# Evals (tests/evals) are excluded from the default suite; run explicitly with
# `uv run pytest tests/evals`.
addopts = "--ignore=tests/evals"
asyncio_mode = "auto"
markers = [
    "integration: requires a live graph backend (embedded FalkorDB via redislite by default; other backends via RUNIC_TEST_BACKENDS env var + docker-compose.test.yml)",
    "requires_multi_label: test requires multi-label node support (not available on Apache AGE)",
    "requires_geo_update: test requires SET n.prop = point() support (not available on ArcadeDB via Bolt)",
]

[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
exclude = [
    ".agents",
    ".cache",
    ".claude",
    ".venv",
    "build",
    "dist",
    "examples",
    "skill",
    "tests/evals",
]

[tool.ty.rules]
unresolved-import = "warn"
missing-argument = "error"

[tool.mypy]
cache_dir = ".cache/mypy"

[tool.coverage.run]
branch = true
source = ["runic"]
omit = ["runic/adapters/*"]

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:", "if __name__ == .__main__.:", "pragma: no cover"]
fail_under = 80
show_missing = true
skip_covered = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
